# yui

./: .gitignore  CONTRIBUTING.md  Makefile  READ.md  README.md  STM32F746NGHx_FLASH.ld  app.json  backend.h  backend_sdl.c  build.sh  event.c  event.h  gdb.gdb  layer.c  layer.h  layout.c  layout.h  main  main.c  render.c  render.h  softui.md  test.json  ui_layout.json  util.c  ya.py  ytype.h
app/: app.json  blur_performance_test.json  calc.json  clock-new.json  clock-simple.json  clock.json  color_format_test.json  dark-theme.json  glass_effect_example.json  grid.json  light-theme.json  list.json  login.json  main.c  memory-game.json  order.json  os-desktop.json  photo-album.json  test-animation.json  test-checkbox-basic.json  test-checkbox.json  test-color.json  test-comprehensive.json  test-dialog.json  test-grid.json  test-horizontal-scrollbar.json  test-input.json  test-layout.json  test-layout2.json  test-list.json  test-menu.json  test-popup-menu.json  test-progress.json  test-radiobox.json  test-radiobox2.json  test-radius.json  test-scroll-new.json  test-scrollbar-final.json  test-select.json  test-simple-scroll.json  (+12 more)
app/calc/: app.json  calc.js  calc.json  main.c
app/camera/: app.json  camera.js  main.c
app/db/: README.md  db-config.json  db.js  db.json  main.c  main.h  mysql_fun.c  mysql_fun.h  preferences-settings-design.md
app/gallery/: app.json  gallery.js  gallery.json
app/game/: demo.js  demo.json  level1.json  level2.json
app/js/: app.json  apple-catcher.json  main.c  theme-example.js  whack-a-mole.js  whack-a-mole.json
app/lib/: dialog.js  dialog.json  http.js  router.js  theme.js
app/lvgl/: app.js  app.json  calc.js  calc.json  main.c
app/mquickjs/: app.json  main.c  memory-game.js  memory-game.json  snake-game.json  test-c-call.js  whack-a-mole.json
app/network/: app.json  http.js  main.c  test-http-embedded-ip.js  test-http-embedded.js  test-http.js  test-net.js  test-net.json  test-socket-simple.js  test-socket.js  test-socket.json
app/photo/: README.md  api.js  app.json  main.c  photo.js
app/playground/: API_README.md  api-client.js  api-server.py  app.json  events_demo.json  json-editor.js  json-editor.json  main.c  requirements.txt  test-api.html  test-socket.json  test_incremental_api.py
app/reader/: README.md  main.c  reader-theme-dark.json  reader-theme-light.json  reader.js  reader.json
app/shopping/: app.js  app.json
app/tests/: advanced_transparent_test.json  clock.yaml  debug-theme.js  font_demo.json  glass_effect_example.json  login.json  music.json  progress-circle-demo.json  progress-demo.json  test-checkbox.json  test-commented-json.json  test-connector.js  test-connector.json  test-dialog-lib.js  test-dialog-lib.json  test-dialog.json  test-dropdown.json  test-editor.json  test-grid-component.js  test-grid-component.json  test-inspect.js  test-inspect.json  test-json-update-en.js  test-json-update-simple.js  test-json-update.js  test-json-update.json  test-layer-dump.js  test-layer-dump.json  test-layout2.json  test-layout3.json  test-lines.json  test-list.json  test-list2.json  test-loading.js  test-loading.json  test-mario-object.js  test-mario-object.json  test-menu.json  test-page-lifecycle.js  test-page-lifecycle.json  (+31 more)
app/watch-os/: app.js  app.json  config.json  main.c  watch-os.md
docs/: architecture.md  blur-performance-optimization.md  c-api-reference.md  developer-guide.md  dialog-component.md  dialog-usage.md  documentation-summary.md  event.md  feature.md  glass-effect-guide.md  index.md  input-device-design.md  json-format-spec.md  json-update-examples.md  json-update-implementation.md  json-update-spec.md  json_format_spec.md  layer-prop.md  lvgl-backend-design.md  mini-game-engine-design.md  net.md  perf.md  plane.md  platform-design.md  select-colors.md  theme-implementation.md  theme.md  transparent-support-guide.md  yui-js-api.md
docs/components/: button-component.md  connector-draggable-component.md  grid-component.md  loading-component.md  pagination-component.md  sash_component.md  select-component.md  table-component.md  text-component.md
lib/: ya.py
lib/cjson/: ya.py
lib/cmocka/: ya.py
lib/jsmario/: js_module.c  ya.py
lib/jsmodule/: js_common.c  js_module.c  js_module.h  js_socket.c  js_socket.h  mqjs_stdlib.c  mqjs_stdlib.h  ya.py  yui_stdlib.c  yui_stdlib.h  yui_stdlib_build.c  yui_stdlib_link.c  yui_stdlib_stubs.c  yui_stubs.c
lib/jsmodule-mario/: js_module.c  ya.py
lib/jsmodule-quickjs/: js_game.c  js_game.h  js_module.c  js_module.h  js_perf.c  js_perf.h  js_socket.c  js_socket.h  js_timer.c  js_timer.h  ya.py
lib/libquickjs/: SConscript  quickjs.c  ya.py
lib/lvgl/: lv_conf.h  lv_port.h  lvgl.mk  ya.py
lib/lvglmodule/: lvgl_component.h  lvgl_font.c  lvgl_font.h  lvgl_register.c  lvgl_widget.c  (+4 more)
platform/: README.md  ya.py
platform/android/app/src/main/cpp/: CMakeLists.txt
platform/ios/: CMakeLists.txt  README.md  YuiBridge.h  YuiBridge.mm  ios_metal_glue.h  ios_metal_glue.mm
platform/ios/YuiApp/: Info.plist  YuiApp.swift  YuiBridgingHeader.h  YuiViewController.swift
scripts/: build-android-libs.ps1  patch_android_prebuilt.py  run_tests.py
src/: animate.c  animate.h  backend.h  backend_sdl.c  component_registry.c  component_registry.h  event.c  event.h  json_update.c  json_update.h  layer.c  layer.h  layer_lifecycle.c  layer_lifecycle.h  layer_properties.c  layer_properties.h  layer_update.c  layer_update.h  layout.c  layout.h  log.c  log.h  main.c  popup_manager.c  popup_manager.h  render.c  render.h  screenshot.c  screenshot.h  theme.c  theme.h  theme_manager.c  theme_manager.h  util.c  util.h  ya.py  ytype.h
tests/: README.md  dialog_example.c  popup_integration_example.c  scope-test-first.js  scope-test-second.js  scope-test.json  test-select-label-value.json  test-text-onchange.js  test-text-onchange.json  test-theme.js  test-theme.json  test_blur_cache.c  test_content_size.c  test_layer_json_dump.c  test_select.c  test_simple_scroll.c  test_text_render.c  test_text_simple.c  test_text_visibility.c  test_treeview_scroll.c  theme-simple-test.js  ya.py
(+271 files in other folders)
